:wrench: Chore: Update .env file with database and API configurations

--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
+# Variables de entorno para la aplicación
+
+# Configuración de la base de datos
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=mydatabase
+DB_USER=myuser
+DB_PASSWORD=mypassword
+
+# Configuración de la API
+API_HOST=0.0.0.0
+API_PORT=8000
+DEBUG=True
+
+# Otras configuraciones
+SECRET_KEY=your_secret_key
 
