--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,1 +1,19 @@
 
+steps:
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/user-management-api:$SHORT_SHA', '.' ]
+
+- name: 'gcr.io/cloud-builders/docker'
+  args: [ 'push', 'gcr.io/$PROJECT_ID/user-management-api:$SHORT_SHA' ]
+
+- name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+  entrypoint: gcloud
+  args:
+  - run
+  - deploy
+  - user-management-api
+  - '--image'
+  - 'gcr.io/$PROJECT_ID/user-management-api:$SHORT_SHA'
+  - '--region'
+  - 'us-central1'
+  - '--platform-managed'
