:wrench: Chore: Update .env file with basic application settings

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ DB_PORT=5432
 DB_NAME=mydatabase
 DB_USER=myuser
 DB_PASSWORD=mypassword
+DB_DIALECT=postgresql
+DB_SCHEMA=public
 
 # Configuración de la API
 API_HOST=0.0.0.0
