--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@
 # Configuración de la base de datos
 DB_HOST=localhost
 DB_PORT=5432
-DB_NAME=mydatabase
-DB_USER=myuser
-DB_PASSWORD=mypassword
+DB_DATABASE_NAME=user_management_db
+DB_USER=postgres
+DB_PASSWORD=1234
 DB_DIALECT=postgresql
 DB_SCHEMA=public
 
