--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,57 @@
-fastapi
-uvicorn[standard]
-pydantic[email]
-pytest
-httpx 
-Faker
-sqlalchemy
-psycopg2-binary
-python-jose[cryptography]
-passlib[bcrypt]
-python-multipart
-python-dotenv
-injector
-pytest-faker
-pydantic-settings
+annotated-types==0.7.0
+anyio==4.9.0
+bcrypt==4.3.0
+black==25.1.0
+certifi==2025.4.26
+cffi==1.17.1
+click==8.2.0
+colorama==0.4.6
+cryptography==44.0.3
+dnspython==2.7.0
+ecdsa==0.19.1
+email_validator==2.2.0
+Faker==37.3.0
+fastapi==0.115.12
+flake8==7.2.0
+greenlet==3.2.2
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+injector==0.22.0
+mccabe==0.7.0
+mypy_extensions==1.1.0
+packaging==25.0
+passlib==1.7.4
+pathspec==0.12.1
+platformdirs==4.3.8
+pluggy==1.5.0
+psycopg2-binary==2.9.10
+pyasn1==0.4.8
+pycodestyle==2.13.0
+pycparser==2.22
+pydantic==2.11.4
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+pyflakes==3.3.2
+PyMySQL==1.1.1
+pytest==8.3.5
+pytest-faker==2.0.0
+python-dotenv==1.1.0
+python-jose==3.4.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+SQLAlchemy-Utils==0.41.2
+starlette==0.46.2
+typing-inspection==0.4.0
+typing_extensions==4.13.2
+tzdata==2025.2
+uvicorn==0.34.2
+watchfiles==1.0.5
+websockets==15.0.1
